# clean-my-shit

./: CLAUDE.md  README.md  RELEASE.md
tools/iconforge/: Cargo.toml  THIRD-PARTY.md
tools/iconforge/src/: main.rs
